Fixed infinite scrolling on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,6 +84,7 @@ button:hover {
   }
   
   .main-content {
+    height: 90vh;
     width: 100%;
     margin-top: 10vh;
     flex: 1 1 100%;
