--- a/src/Components/MasterDetail/MasterDetailContainer.scss
+++ b/src/Components/MasterDetail/MasterDetailContainer.scss
@@ -31,7 +31,13 @@
 
 @media screen and (max-width: 980px) {
     #master-container {
+        
         width: 100%;
+    }
+    
+    #master-container,
+    #detail-container {
+        height: 90vh;
     }
 
 }
